--- a/ysh-app/www/index.html
+++ b/ysh-app/www/index.html
@@ -19,7 +19,8 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/controllers.main.js"></script>
+	<script src="js/controllers.member.js"></script>
 	<script src="js/models.js"></script>
 	<script src="js/services.js"></script>
 	<script src="js/components.js"></script>
